Fix event hooks
* Add the hooks to node.Config
* Detect the hooks config change when decide to fire a
  NodeConfigUpdated event
* Move output.Flatten to flatten.Flatten as the data flattening
  is used for more than the output renderer (e.g. in logs)
* Rename node.Config.Equals to node.Config.Equal (aligned with
  Equal functions in the golang core)

Example:

	$ bin/om cluster config show --section hook#1
	[hook#1]
	events = HeartbeatAlive HeartbeatStale
	command = env | tee /tmp/hook1.txt

	$ bin/om daemon status -o flat | grep hook
	cluster.node.dev2n1.config.hooks[0].command[0] = "env"
	cluster.node.dev2n1.config.hooks[0].command[1] = "|"
	cluster.node.dev2n1.config.hooks[0].command[2] = "tee"
	cluster.node.dev2n1.config.hooks[0].command[3] = "/tmp/hook1.txt"
	cluster.node.dev2n1.config.hooks[0].events[0] = "HeartbeatAlive"
	cluster.node.dev2n1.config.hooks[0].events[1] = "HeartbeatStale"
	cluster.node.dev2n1.config.hooks[0].name = "1"

Changes are highlighted precisely in logs:

	11:26:49.257 INF daemon: hook: 1: +events[2]="NodeLabelsCommited"
	11:26:49.257 INF daemon: hook: 1: stop listening for events [HeartbeatAlive HeartbeatStale NodeLabelsCommited]
	11:26:50.054 INF daemon: hook: 1: listening for events [HeartbeatAlive HeartbeatStale]
